fixe loading map issue after facilities page

--- a/includes/_header.html
+++ b/includes/_header.html
@@ -15,7 +15,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Map</a>
+                                <a class="nav-link" href="index.html" data-bypass-router="true">Map</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="facilities.html">Facilities</a>
