--- a/src/views/documents.html
+++ b/src/views/documents.html
@@ -110,11 +110,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom Documents Page JS -->
-    <script src="js/documents.js" data-page-script="true"></script> <!-- Link to new JS file -->
-    <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) -->
-    <!-- <script type="module" src="js/common.js"></script> --> <!-- Replaced by Vue app -->
-    <!-- Main Vue App Initialization is handled by index.html -->
-    <script type="module" src="js/app.js" defer></script>
+    <!-- Legacy script links removed - functionality to be handled by Vue components -->
 
     <!-- Removed inline theme and auth scripts -->
 
